sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr=getNombreValeurs()
  var v=0
  for (i<-1 to lgr-1){
    v=getValeur(i)
    while (i>0){
    	if (plusPetit(v,getValeur(i-1))==true){
      	copie(i-1, i)
        i=i-1
    	}
    }
    setValeur(i-1,v)	
  }
}